@@ -1,3 +1,8 @@
+2012-10-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* liststore.py, accountliststore.py, plugins/facebook/*:
+	  Implemented basic support for Facebook news feed.
+
 2012-10-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* plugins/facebook/*: Implemented a Facebook authorization assistant.
